--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "clean": "rm -rf app && rm -f index.js",
     "start": "node index.js",
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
-    "prebuild": "yarn clean",
+    "prebuild": "pnpm clean",
     "build": "tsc",
     "test": "tsc --noEmit",
     "lint": "eslint src/",
-    "deploy": "yarn build && yarn deploy:all && yarn clean",
-    "deploy:env": "deta update -e .env",
-    "deploy:app": "deta deploy",
-    "deploy:all": "yarn deploy:env && yarn deploy:app"
+    "deploy": "pnpm build && pnpm deploy:all && pnpm clean",
+    "deploy:app": "space push",
+    "deploy:all": "pnpm deploy:app"
   },
   "keywords": [
     "deta.sh",
@@ -36,14 +35,24 @@
   "homepage": "https://github.com/waptik/grammy-on-deta-template#readme",
   "dependencies": {
     "@grammyjs/transformer-throttler": "^1.1.2",
+    "axios": "^1.4.0",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
-    "grammy": "^1.10.1"
+    "grammy": "^1.16.1",
+    "@grammyjs/conversations": "^1.1.2",
+    "jalaali-js": "^1.2.6",
+    "@grammyjs/menu": "^1.2.1",
+    "@grammyjs/parse-mode": "^1.7.1",
+    "@grammyjs/stateless-question": "^3.0.1",
+    "zero-fill": "^2.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jalaali-js": "^1.1.1",
     "@types/node": "^18.6.5",
+    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
